add zip, unzip, copyDir, deleteDir

--- a/pom.xml
+++ b/pom.xml
@@ -59,36 +59,43 @@
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-browser</artifactId>
             <version>${gltf-version}</version>
+            <systemPath>${basedir}/lib/jgltf-browser-2.0.1-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-impl-v1</artifactId>
             <version>${gltf-version}</version>
+            <systemPath>${basedir}/lib/jgltf-impl-v1-2.0.1-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-model</artifactId>
             <version>${gltf-version}</version>
+            <systemPath>${basedir}/lib/jgltf-model-2.0.1-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-obj</artifactId>
             <version>${gltf-version}</version>
+            <systemPath>${basedir}/lib/jgltf-obj-2.0.1-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-viewer</artifactId>
             <version>${gltf-version}</version>
+            <systemPath>${basedir}/lib/jgltf-viewer-2.0.1-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-viewer-jogl</artifactId>
             <version>${gltf-version}</version>
+            <systemPath>${basedir}/lib/jgltf-viewer-jogl-2.0.1-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-viewer-lwjgl</artifactId>
             <version>${gltf-version}</version>
+            <systemPath>${basedir}/lib/jgltf-viewer-lwjgl-2.0.1-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
@@ -104,16 +111,6 @@
             <groupId>javax.vecmath</groupId>
             <artifactId>vecmath</artifactId>
             <version>1.5.2</version>
-        </dependency>
-        <dependency>
-            <groupId>de.javagl</groupId>
-            <artifactId>rendering-core</artifactId>
-            <version>0.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>de.javagl</groupId>
-            <artifactId>rendering-interaction</artifactId>
-            <version>0.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
