--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.rooomy</groupId>
     <artifactId>GLTFConverter</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
 
     <properties>
         <gltf-version>2.0.1-SNAPSHOT</gltf-version>
@@ -43,6 +43,10 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <descriptors>
+                        <!--assembly配置文件路径，注意需要在项目中新建文件assembly/release.xml-->
+                        <descriptor>${basedir}/assembly/release.xml</descriptor>
+                    </descriptors>
                 </configuration>
             </plugin>
         </plugins>
@@ -59,36 +63,50 @@
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-browser</artifactId>
             <version>${gltf-version}</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jgltf-browser-${gltf-version}.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-impl-v1</artifactId>
             <version>${gltf-version}</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jgltf-impl-v1-${gltf-version}.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-model</artifactId>
             <version>${gltf-version}</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jgltf-model-${gltf-version}.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-obj</artifactId>
             <version>${gltf-version}</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jgltf-obj-${gltf-version}.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-viewer</artifactId>
             <version>${gltf-version}</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jgltf-viewer-${gltf-version}.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-viewer-jogl</artifactId>
             <version>${gltf-version}</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jgltf-viewer-jogl-${gltf-version}.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>jgltf-viewer-lwjgl</artifactId>
             <version>${gltf-version}</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jgltf-viewer-lwjgl-${gltf-version}.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
